# ue5_asset_gen

./: Makefile  README.md  pyproject.toml
data/raw/: prompts.txt
src/: config.py  infer.py  inference.py  view.py
